@@ -49,6 +49,7 @@ def configure(conf):
     conf.define("HAVE_GNUTLS", 1)
 
   conf.define("HAVE_CONFIG_H", 1)
+  conf.env.append_value("CCFLAGS", "-DEIO_STACKSIZE=%d" % (4096*8))
 
   # Split off debug variant before adding variant specific defines
   debug_env = conf.env.copy()
@@ -63,8 +64,8 @@ def configure(conf):
 
   # Configure default variant
   conf.setenv('default')
-  conf.env.append_value('CCFLAGS', ['-DNDEBUG', '-O0', '-g'])
-  conf.env.append_value('CXXFLAGS', ['-DNDEBUG', '-O0', '-g'])
+  conf.env.append_value('CCFLAGS', ['-DDEBUG', '-O0', '-g'])
+  conf.env.append_value('CXXFLAGS', ['-DDEBUG', '-O0', '-g'])
   conf.write_config_header("config.h")
 
 def build(bld):
@@ -77,18 +78,18 @@ def build(bld):
   deps_tgt = join(bld.srcnode.abspath(bld.env),"deps")
   v8dir_src = join(deps_src,"v8")
   v8dir_tgt = join(deps_tgt, "v8")
-  #v8lib = bld.env["staticlib_PATTERN"] % "v8_g"
-  v8lib = bld.env["staticlib_PATTERN"] % "v8"
+  v8lib = bld.env["staticlib_PATTERN"] % "v8_g"
+  #v8lib = bld.env["staticlib_PATTERN"] % "v8"
   v8 = bld.new_task_gen(
     target=join("deps/v8",v8lib),
-    #rule='cp -rf %s %s && cd %s && scons -Q mode=debug library=static snapshot=on' 
-    rule='cp -rf %s %s && cd %s && scons -Q library=static snapshot=on' 
+    rule='cp -rf %s %s && cd %s && scons -Q mode=debug library=static snapshot=on' 
+    #rule='cp -rf %s %s && cd %s && scons -Q library=static snapshot=on' 
       % ( v8dir_src , deps_tgt , v8dir_tgt),
     before="cxx"
   )
   bld.env["CPPPATH_V8"] = "deps/v8/include"
-  bld.env["STATICLIB_V8"] = "v8"
-  #bld.env["STATICLIB_V8"] = "v8_g"
+  #bld.env["STATICLIB_V8"] = "v8"
+  bld.env["STATICLIB_V8"] = "v8_g"
   bld.env["LIBPATH_V8"] = v8dir_tgt
   bld.env["LINKFLAGS_V8"] = "-pthread"
 
